--- a/src/main/resources/static/index2.html
+++ b/src/main/resources/static/index2.html
@@ -38,7 +38,7 @@
               </table>
             </div><br>
 
-            <button class="btn btn-primary" onclick="getDetail();">VERIFICAR</button>
+            <button class="btn btn-primary" onclick="getDetail()">VERIFICAR</button>
           </div><br>
         </div>
     </div>
