--- a/src/main/resources/static/index2.html
+++ b/src/main/resources/static/index2.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="./js/Delegados.js"></script>
+  <script src="./js/delegados.js"></script>
   <title>Consulta Delegados</title>
 </head>
 <body class="d-flex flex-column">
