--- a/src/main/resources/static/information.html
+++ b/src/main/resources/static/information.html
@@ -10,11 +10,11 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="./js/delegados.js"></script>
+  <script src="./js/tablas.js"></script>
   <script src="./js/func_generales.js"></script>
-  <title>Consulta Delegados</title>
+  <title>Editar Informacion</title>
 </head>
-<body class="d-flex flex-column">
+<body onload="welcomeAdmin();getData(sessionStorage.getItem('entidad'));" id="bodyMenu" class="d-flex flex-column">
   <header class="bg-dark text-white fixed-top">
     <nav class="navbar navbar-inverse navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
@@ -24,38 +24,30 @@
         <div class="ml-auto"></div>
         <ul class="navbar-nav">
           <li class="nav-item">
-              <h4 class="mx-auto"><a class="nav-link" href="./login.html"><img class="navbar-brand" style="max-width: 50px" src="images/login.png" alt="Logo de la página web">Iniciar Sesión</a></h3>
+              <h4 class="mx-auto"><a class="nav-link" href="./mainMenu.html"><img class="navbar-brand" style="max-width: 50px" src="images/home.png" alt="Logo de la página web">MENU</a></h3>
+          </li>
+        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+              <h4 class="mx-auto"><a class="nav-link"  onclick="sessionStorage.clear();" href="./login.html"><img class="navbar-brand" style="max-width: 50px" src="images/logout.png" alt="Logo de la página web">SALIR</a></h3>
           </li>
         </ul>
       </div>
     </nav>
   </header>
 
+
   <main id="page-content" class="mt-5">
-    <div class="mb-4">
-        <div class="container" style="margin-top: 125px; max-width: 600px;">
-          <h1 class="mx-auto">Consulte su Puesto asignado</h1>
-          <div class="custom-form">
-            <!-- <form> -->
-              <div class="form-group">
-                <img class="img-fluid mx-auto d-block" style="max-width: 220px" src="images/identificacion.png" alt="Logo de la página web">
-              </div>
-              <div class="form-group">
-                <!-- <label for="cedula">Cedula</label> -->
-                <input type="cedula" class="form-control" type="number" oninput="validarNumero(this)" id="cedula" placeholder="Ingresa tu numero de Cedula" required autocomplete="off">
-              </div>
-            <!-- </form> -->
-
-            <div class="custom-form table-responsive mx-auto" id="datos_delegado" style="display: none;max-width: 450px;">
-              <table class="table table-striped table-bordered table-hover " id="tabla_datos_delegado">
-              </table>
-            </div><br>
-
-            <button class="btn btn-success btn-block" onclick="getDetail()">VERIFICAR</button>
-          </div><br>
-        </div>
+    <div class="container" style="margin-top: 125px;">
+      <h1>Edite o Elimine datos de los registros</h1><br>
+      <div class="custom-form">
+          <button class="btn btn-success" style="margin-bottom: 5px;" onclick="formulario(sessionStorage.getItem('entidad'));">Agregar nuevo registro</button>
+         
+      </div>
     </div>
+    <br>
   </main>
+
 
   <footer class="bg-dark text-white py-2">
     <div class="container text-center">
