--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -10,48 +10,44 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="./js/delegados.js"></script>
+  <script src="./js/admin.js"></script>
   <script src="./js/func_generales.js"></script>
-  <title>Consulta Delegados</title>
+  <title>Administrador</title>
 </head>
-<body class="d-flex flex-column">
+<body onload="sessionStorage.clear();" class="d-flex flex-column">
   <header class="bg-dark text-white fixed-top">
     <nav class="navbar navbar-inverse navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
         <div class="navbar-brand">
           <img class="navbar-brand" style="max-width: 120px" src="images/logoRNEC.jpg" alt="Logo de la página web">
         </div>
-        <div class="ml-auto"></div>
-        <ul class="navbar-nav">
-          <li class="nav-item">
-              <h4 class="mx-auto"><a class="nav-link" href="./login.html"><img class="navbar-brand" style="max-width: 50px" src="images/login.png" alt="Logo de la página web">Iniciar Sesión</a></h3>
-          </li>
-        </ul>
       </div>
     </nav>
   </header>
 
   <main id="page-content" class="mt-5">
     <div class="mb-4">
-        <div class="container" style="margin-top: 125px; max-width: 600px;">
-          <h1 class="mx-auto">Consulte su Puesto asignado</h1>
+        <div class="container-sm" style="margin-top: 125px; max-width: 700px;">
+          <h1>Ingrese sus Datos</h1>
           <div class="custom-form">
-            <!-- <form> -->
-              <div class="form-group">
-                <img class="img-fluid mx-auto d-block" style="max-width: 220px" src="images/identificacion.png" alt="Logo de la página web">
+            <div class="row">
+              <div class="col-sm-8">
+                <form class="was-validated">
+                  <div class="form-group">
+                    <label for="id">Cedula</label>
+                    <input type="number" class="form-control" id="id" placeholder="Ingresa tu numero de cedula" required autocomplete="off">
+                  </div>
+                  <div class="form-group">
+                    <label for="password">Contraseña:</label>
+                    <input type="password" class="form-control" id="password" placeholder="Ingresa tu contraseña" required autocomplete="off">
+                  </div>
+                </form>
+                <button class="btn btn-primary btn-lg btn-block" onclick="validateUser();">INGRESAR</button>
               </div>
-              <div class="form-group">
-                <!-- <label for="cedula">Cedula</label> -->
-                <input type="cedula" class="form-control" type="number" oninput="validarNumero(this)" id="cedula" placeholder="Ingresa tu numero de Cedula" required autocomplete="off">
+              <div class="col-sm-4">
+                <img class="img-fluid mx-auto d-block" style="max-width: 200px" src="images/loginProfile.png" alt="Login">
               </div>
-            <!-- </form> -->
-
-            <div class="custom-form table-responsive mx-auto" id="datos_delegado" style="display: none;max-width: 450px;">
-              <table class="table table-striped table-bordered table-hover " id="tabla_datos_delegado">
-              </table>
-            </div><br>
-
-            <button class="btn btn-success btn-block" onclick="getDetail()">VERIFICAR</button>
+            </div>
           </div><br>
         </div>
     </div>
