finalizacion pagina web delegados; para revision

--- a/src/main/resources/static/tablas.html
+++ b/src/main/resources/static/tablas.html
@@ -39,7 +39,7 @@
 
   <main id="page-content" class="mt-5">
     <div class="container" style="margin-top: 125px;">
-      <h1>Edite o Elimine datos de los registros</h1><br>
+      <h1 id="titulo_tabla"></h1><br>
       <div class="custom-form">
           <button class="btn btn-success" style="margin-bottom: 5px;" onclick="formulario(sessionStorage.getItem('entidad'));">Agregar nuevo registro</button>
           <div class="custom-form table-responsive">
