--- a/src/main/resources/static/information.html
+++ b/src/main/resources/static/information.html
@@ -10,7 +10,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="./js/tablas.js"></script>
+  <script src="./js/information.js"></script>
   <script src="./js/func_generales.js"></script>
   <title>Editar Informacion</title>
 </head>
@@ -38,11 +38,17 @@
 
 
   <main id="page-content" class="mt-5">
-    <div class="container" style="margin-top: 125px;">
-      <h1>Edite o Elimine datos de los registros</h1><br>
+    <div class="container" style="margin-top: 125px; max-width: 550px;">
+      <h1 id="titulo_tabla"></h1><br>
       <div class="custom-form">
-          <button class="btn btn-success" style="margin-bottom: 5px;" onclick="formulario(sessionStorage.getItem('entidad'));">Agregar nuevo registro</button>
-         
+          <div class="d-flex justify-content-center">
+            <table id="tabla"></table>
+          </div><br>
+          <div class="btn-group btn-block">
+            <button class="btn btn-success" style="margin-right: 5px;" onclick="actualizar();">ACTUALIZAR</button>
+            <button class="btn btn-danger" style="margin-left: 5px; margin-right: 5px;" onclick="consultarDatos(sessionStorage.getItem('entidad'));">Ver Lista</button>
+            <button class="btn btn-primary" style="margin-left: 5px;" onclick="formulario(sessionStorage.getItem('entidad'));">Nuevo Registro</button>
+          </div>
       </div>
     </div>
     <br>
