--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -21,6 +21,12 @@
         <div class="navbar-brand">
           <img class="navbar-brand" style="max-width: 120px" src="images/logoRNEC.jpg" alt="Logo de la página web">
         </div>
+        <div class="ml-auto"></div>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+              <h4 class="mx-auto"><a class="nav-link" href="./index2.html"><img class="navbar-brand" style="max-width: 80px" src="images/puestoVotacion.jpg" alt="Logo de la página web">Consultar Mi Puesto de Votación</a></h3>
+          </li>
+        </ul>
       </div>
     </nav>
   </header>
