--- a/src/main/resources/static/puestoRegistro.html
+++ b/src/main/resources/static/puestoRegistro.html
@@ -68,7 +68,7 @@
           </div>
           <div class="form-group">
             <label for="cel_encargado">Celular encargado:</label>
-            <input type="text" class="form-control" id="cel_encargado" placeholder="Ingresa el celular del encargado del PV" required autocomplete="off">
+            <input type="number" class="form-control" id="cel_encargado" placeholder="Ingresa el celular del encargado del PV" required autocomplete="off">
           </div>
           <div class="form-group">
             <label for="correo_encargado">Correo electrónico del encargado:</label>
